Initial Create Restaurant
- Create Controller For Restaurant, html mapping base on Restaurant Controller (No CRUD already)

--- a/src/main/resources/templates/admin/fragments/layout.html
+++ b/src/main/resources/templates/admin/fragments/layout.html
@@ -179,6 +179,22 @@
                         <div data-i18n="Tables">Create New</div>
                     </a>
                 </li>
+
+                <!-- Restaurant -->
+                <li class="menu-header small text-uppercase"><span class="menu-header-text">Restaurant</span></li>
+                <!-- Tables -->
+                <li class="menu-item">
+                    <a th:href="@{/admin/restaurant/list}" class="menu-link">
+                        <i class="menu-icon tf-icons bx bx-table"></i>
+                        <div data-i18n="Tables">List</div>
+                    </a>
+                </li>
+                <li class="menu-item">
+                    <a th:href="@{/admin/restaurant/new}" class="menu-link">
+                        <i class="menu-icon tf-icons bx bx-table"></i>
+                        <div data-i18n="Tables">Create New</div>
+                    </a>
+                </li>
             </ul>
         </aside>
         <!-- / Menu -->
