Modify Layout, Add Service, Controller, Repository
- Modify Layout for Layout and Create Restaurant
- Add Service, Repository for Restaurant
- Not already mapping Service into Restaunrant Controller

--- a/src/main/resources/templates/admin/restaurant/createRestaurant.html
+++ b/src/main/resources/templates/admin/restaurant/createRestaurant.html
@@ -57,44 +57,44 @@
                                 <div class="card-body">
                                     <form>
                                         <div class="mb-3">
-                                            <label class="form-label" for="basic-default-fullname">Full Name</label>
-                                            <input type="text" class="form-control" id="basic-default-fullname" placeholder="John Doe" />
+                                            <label class="form-label" for="basic-default-name">Name</label>
+                                            <input type="text" class="form-control" id="basic-default-name" placeholder="Input name" />
                                         </div>
                                         <div class="mb-3">
-                                            <label class="form-label" for="basic-default-company">Company</label>
-                                            <input type="text" class="form-control" id="basic-default-company" placeholder="ACME Inc." />
+                                            <label class="form-label" for="basic-default-address">Address</label>
+                                            <input type="text" class="form-control" id="basic-default-address" placeholder="Input address" />
                                         </div>
                                         <div class="mb-3">
-                                            <label class="form-label" for="basic-default-email">Email</label>
-                                            <div class="input-group input-group-merge">
-                                                <input
-                                                        type="text"
-                                                        id="basic-default-email"
-                                                        class="form-control"
-                                                        placeholder="john.doe"
-                                                        aria-label="john.doe"
-                                                        aria-describedby="basic-default-email2"
-                                                />
-                                                <span class="input-group-text" id="basic-default-email2">@example.com</span>
-                                            </div>
-                                            <div class="form-text">You can use letters, numbers & periods</div>
+                                            <label class="form-label" for="basic-default-slug">Slug</label>
+                                            <input type="text" class="form-control" id="basic-default-slug" placeholder="Input address" />
                                         </div>
                                         <div class="mb-3">
-                                            <label class="form-label" for="basic-default-phone">Phone No</label>
-                                            <input
-                                                    type="text"
-                                                    id="basic-default-phone"
-                                                    class="form-control phone-mask"
-                                                    placeholder="658 799 8941"
-                                            />
-                                        </div>
-                                        <div class="mb-3">
-                                            <label class="form-label" for="basic-default-message">Message</label>
+                                            <label class="form-label" for="basic-default-description">Description</label>
                                             <textarea
-                                                    id="basic-default-message"
+                                                    id="basic-default-description"
                                                     class="form-control"
-                                                    placeholder="Hi, Do you have a moment to talk Joe?"
+                                                    placeholder="Describe about this restaurant"
                                             ></textarea>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label" for="formFileLogo">Logo</label>
+                                            <input class="form-control" type="file" id="formFileLogo">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label" for="formFileImage">Image</label>
+                                            <input class="form-control" type="file" id="formFileImage">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label" for="html5-open_time-input">Open time</label>
+                                            <input class="form-control" type="time" value="12:30:00" id="html5-open_time-input">
+                                        </div>
+                                        <div class="mb-3">
+                                            <label class="form-label" for="html5-close_time-input">Close time</label>
+                                            <input class="form-control" type="time" value="12:30:00" id="html5-close_time-input">
+                                        </div>
+                                        <div class="form-check form-switch mb-3">
+                                            <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked="">
+                                            <label class="form-check-label" for="flexSwitchCheckChecked">Is active</label>
                                         </div>
                                         <button type="submit" class="btn btn-primary">Send</button>
                                     </form>
