--- a/src/main/resources/templates/admin/restaurant/restaurantList.html
+++ b/src/main/resources/templates/admin/restaurant/restaurantList.html
@@ -69,12 +69,12 @@
                                 </tr>
                                 </thead>
                                 <tbody class="table-border-bottom-0">
-                                <tr>
-                                    <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>Nhà hàng 1</strong></td>
-                                    <td>http://localhost:8080/</td>
-                                    <td>Nhà hàng có nhiều món ngon</td>
-                                    <td>123 Bà Hom</td>
-                                    <td>
+                                <tr th:each="restaurant : ${restaurants}">
+                                    <td th:text="${restaurant.restaurantName}"><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>Nhà hàng 1</strong></td>
+                                    <td th:text="${restaurant.slug}">http://localhost:8080/</td>
+                                    <td th:text="${restaurant.description}">Nhà hàng có nhiều món ngon</td>
+                                    <td th:text="${restaurant.address}">123 Bà Hom</td>
+                                    <td th:text="${restaurant.logo}">
                                         <ul class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
                                             <li
                                                     data-bs-toggle="tooltip"
@@ -87,7 +87,7 @@
                                             </li>
                                         </ul>
                                     </td>
-                                    <td>
+                                    <td th:text="${restaurant.image}">
                                         <ul class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
                                             <li
                                                 data-bs-toggle="tooltip"
@@ -100,10 +100,10 @@
                                             </li>
                                         </ul>
                                     </td>
-                                    <td>8:00</td>
-                                    <td>21:00</td>
-                                    <td><span class="badge bg-label-primary me-1">Active</span></td>
-                                    <td>
+                                    <td th:text="${restaurant.open_time}">8:00</td>
+                                    <td th:text="${restaurant.close_time}">21:00</td>
+                                    <td th:text="${restaurant.is_active}"><span class="badge bg-label-primary me-1">Active</span></td>
+                                    <td th:text="">
                                         <div class="col-lg-4 col-md-6">
                                             <div class="mt-1">
                                                 <button
@@ -141,7 +141,7 @@
                                             </div>
                                         </div>
                                     </td>
-                                    <td>
+                                    <td th:text="">
                                         <div class="col-lg-4 col-md-6">
                                             <div class="mt-1">
                                                 <button
@@ -179,171 +179,7 @@
                                             </div>
                                         </div>
                                     </td>
-                                    <td>
-                                        <div class="col-lg-4 col-md-6">
-                                            <div class="mt-1">
-                                                <button
-                                                        type="button"
-                                                        class="btn btn-primary"
-                                                        data-bs-toggle="modal"
-                                                        data-bs-target="#modalOrder"
-                                                >
-                                                    List Order
-                                                </button>
-
-                                                <!-- Modal-->
-                                                <div
-                                                        class="modal fade"
-                                                        id="modalOrder"
-                                                        aria-labelledby="modalOrderLabel"
-                                                        tabindex="-1"
-                                                        style="display: none"
-                                                        aria-hidden="true"
-                                                >
-                                                    <div class="modal-dialog modal-dialog-centered">
-                                                        <div class="modal-content">
-                                                            <div class="modal-header">
-                                                                <h5 class="modal-title" id="modalOrderLabel">List Order</h5>
-                                                                <button
-                                                                        type="button"
-                                                                        class="btn-close"
-                                                                        data-bs-dismiss="modal"
-                                                                        aria-label="Close"
-                                                                ></button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="dropdown">
-                                            <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
-                                                <i class="bx bx-dots-vertical-rounded"></i>
-                                            </button>
-                                            <div class="dropdown-menu">
-                                                <a class="dropdown-item" href="javascript:void(0);"
-                                                ><i class="bx bx-edit-alt me-1"></i> Edit</a
-                                                >
-                                                <a class="dropdown-item" href="javascript:void(0);"
-                                                ><i class="bx bx-trash me-1"></i> Delete</a
-                                                >
-                                            </div>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>Nhà hàng 1</strong></td>
-                                    <td>http://localhost:8080/</td>
-                                    <td>Nhà hàng có nhiều món ngon</td>
-                                    <td>123 Bà Hom</td>
-                                    <td>
-                                        <ul class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
-                                            <li
-                                                    data-bs-toggle="tooltip"
-                                                    data-popup="tooltip-custom"
-                                                    data-bs-placement="top"
-                                                    class="avatar avatar-xs pull-up"
-                                                    title="Lilian Fuller"
-                                            >
-                                                <img src="../../admin/assets/img/avatars/5.png" alt="Avatar" class="rounded-circle" />
-                                            </li>
-                                        </ul>
-                                    </td>
-                                    <td>
-                                        <ul class="list-unstyled users-list m-0 avatar-group d-flex align-items-center">
-                                            <li
-                                                    data-bs-toggle="tooltip"
-                                                    data-popup="tooltip-custom"
-                                                    data-bs-placement="top"
-                                                    class="avatar avatar-xs pull-up"
-                                                    title="Lilian Fuller"
-                                            >
-                                                <img src="../../admin/assets/img/avatars/5.png" alt="Avatar" class="rounded-circle" />
-                                            </li>
-                                        </ul>
-                                    </td>
-                                    <td>8:00</td>
-                                    <td>21:00</td>
-                                    <td><span class="badge bg-label-warning me-1">Not active</span></td>
-                                    <td>
-                                        <div class="col-lg-4 col-md-6">
-                                            <div class="mt-1">
-                                                <button
-                                                        type="button"
-                                                        class="btn btn-primary"
-                                                        data-bs-toggle="modal"
-                                                        data-bs-target="#modalFood"
-                                                >
-                                                    List Food
-                                                </button>
-
-                                                <!-- Modal-->
-                                                <div
-                                                        class="modal fade"
-                                                        id="modalFood"
-                                                        aria-labelledby="modalFoodLabel"
-                                                        tabindex="-1"
-                                                        style="display: none"
-                                                        aria-hidden="true"
-                                                >
-                                                    <div class="modal-dialog modal-dialog-centered">
-                                                        <div class="modal-content">
-                                                            <div class="modal-header">
-                                                                <h5 class="modal-title" id="modalFoodLabel">List Food</h5>
-                                                                <button
-                                                                        type="button"
-                                                                        class="btn-close"
-                                                                        data-bs-dismiss="modal"
-                                                                        aria-label="Close"
-                                                                ></button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="col-lg-4 col-md-6">
-                                            <div class="mt-1">
-                                                <button
-                                                        type="button"
-                                                        class="btn btn-primary"
-                                                        data-bs-toggle="modal"
-                                                        data-bs-target="#modalRating"
-                                                >
-                                                    List Rating
-                                                </button>
-
-                                                <!-- Modal-->
-                                                <div
-                                                        class="modal fade"
-                                                        id="modalRating"
-                                                        aria-labelledby="modalRatingLabel"
-                                                        tabindex="-1"
-                                                        style="display: none"
-                                                        aria-hidden="true"
-                                                >
-                                                    <div class="modal-dialog modal-dialog-centered">
-                                                        <div class="modal-content">
-                                                            <div class="modal-header">
-                                                                <h5 class="modal-title" id="modalRatingLabel">List Rating</h5>
-                                                                <button
-                                                                        type="button"
-                                                                        class="btn-close"
-                                                                        data-bs-dismiss="modal"
-                                                                        aria-label="Close"
-                                                                ></button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>
+                                    <td th:text="">
                                         <div class="col-lg-4 col-md-6">
                                             <div class="mt-1">
                                                 <button
